test git ignore

--- a/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj
+++ b/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj
@@ -133,8 +133,10 @@
     <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="OpenGL-Configuration\glad.c" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -142,6 +144,7 @@
     <ClInclude Include="Light.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="scene-info\scene4-ambient.test" />
