--- a/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj
+++ b/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj
@@ -123,6 +123,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OpenGL-Configuration\glad.c" />
     <ClCompile Include="Scene.cpp" />
@@ -130,7 +131,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="FileManager.h" />
-    <ClInclude Include="light.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Scene.h" />
   </ItemGroup>
