--- a/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj.filters
+++ b/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj.filters
@@ -1,92 +1,81 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="OpenGL-Configuration\glad.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="OpenGL-Configuration\glad.c" />
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source-Files</Filter>
     </ClCompile>
     <ClCompile Include="FileManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Scene.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source-Files</Filter>
     </ClCompile>
     <ClCompile Include="Light.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source-Files</Filter>
     </ClCompile>
-<<<<<<< HEAD
-=======
-    <ClCompile Include="Camera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Transform.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="main.cpp">
+      <Filter>Source-Files</Filter>
     </ClCompile>
     <ClCompile Include="Object.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source-Files</Filter>
     </ClCompile>
->>>>>>> b7fd84eba9b5250c4b002f1610806cc844c99825
+    <ClCompile Include="Scene.cpp">
+      <Filter>Source-Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>Source-Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Object.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Camera.h">
+      <Filter>Header-Files</Filter>
     </ClInclude>
     <ClInclude Include="FileManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header-Files</Filter>
     </ClInclude>
     <ClInclude Include="Light.h">
-<<<<<<< HEAD
-=======
-      <Filter>Header Files</Filter>
+      <Filter>Header-Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>Header-Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Header-Files</Filter>
     </ClInclude>
     <ClInclude Include="Transform.h">
->>>>>>> b7fd84eba9b5250c4b002f1610806cc844c99825
-      <Filter>Header Files</Filter>
+      <Filter>Header-Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="scene-info\scene4-ambient.test">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource</Filter>
     </None>
     <None Include="scene-info\scene4-diffuse.test">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource</Filter>
     </None>
     <None Include="scene-info\scene4-emission.test">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource</Filter>
     </None>
     <None Include="scene-info\scene4-specular.test">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource</Filter>
     </None>
     <None Include="scene-info\scene5.test">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource</Filter>
     </None>
     <None Include="scene-info\scene6.test">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource</Filter>
     </None>
     <None Include="scene-info\scene7.test">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Header-Files">
+      <UniqueIdentifier>{f620ad2e-f4d1-4143-a78d-6b0c0c706562}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source-Files">
+      <UniqueIdentifier>{6b0d96c0-c5cd-4241-ba38-587d4e871c57}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource">
+      <UniqueIdentifier>{5d29fd3d-d52d-4b42-830a-b507ca10b82b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
