--- a/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj
+++ b/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="OpenGL-Configuration\glad.c" />
+    <ClCompile Include="Ray.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
@@ -143,6 +144,7 @@
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="Ray.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
