--- a/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj.filters
+++ b/Solutions/hw3-windows/hw3-windows/hw3-windows.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="Transform.cpp">
       <Filter>Source-Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ray.cpp">
+      <Filter>Source-Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -41,6 +44,9 @@
       <Filter>Header-Files</Filter>
     </ClInclude>
     <ClInclude Include="Transform.h">
+      <Filter>Header-Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ray.h">
       <Filter>Header-Files</Filter>
     </ClInclude>
   </ItemGroup>
