--- a/Solutions/hw3-windows/hw2-windows/hw2-windows.vcxproj.filters
+++ b/Solutions/hw3-windows/hw2-windows/hw2-windows.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Transform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IntersectionInfo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IntersectionInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
